--- a/molecule/forget-package/molecule.yml
+++ b/molecule/forget-package/molecule.yml
@@ -1,17 +1,19 @@
-# Copyright (c) 2024 VEXXHOST, Inc.
+# Copyright (c) 2025 VEXXHOST, Inc.
 # SPDX-License-Identifier: Apache-2.0
 
 dependency:
   name: galaxy
 driver:
-  name: default
-  options:
-    managed: False
-    ansible_connection_options:
-      ansible_become: "true"
-      ansible_connection: local
+  name: docker
 platforms:
   - name: instance
+    image: geerlingguy/docker-${MOLECULE_DISTRO:-debian13}-ansible
+    pre_build_image: true
+    override_command: false
+    privileged: true
+    cgroupns_mode: host
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
 provisioner:
   name: ansible
   config_options:
