--- a/molecule/forget-package/prepare.yml
+++ b/molecule/forget-package/prepare.yml
@@ -4,6 +4,12 @@
 - name: Prepare
   hosts: all
   tasks:
+    - name: Update "apt" cache
+      ansible.builtin.apt:
+        update_cache: true
+      when:
+        - ansible_os_family == "Debian"
+
     - name: Install NGINX
       ansible.builtin.package:
         name: nginx
