fix: add missing volume mapping for /lib/modules in molecule config 🐛
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/molecule/containerd/molecule.yml
+++ b/molecule/containerd/molecule.yml
@@ -13,6 +13,7 @@ platforms:
     privileged: true
     cgroupns_mode: host
     volumes:
+      - /lib/modules:/lib/modules:ro
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
 provisioner:
   name: ansible
