--- a/molecule/containerd/molecule.yml
+++ b/molecule/containerd/molecule.yml
@@ -12,6 +12,8 @@ platforms:
     override_command: false
     privileged: true
     cgroupns_mode: host
+    tmpfs:
+      - /var/lib/containerd
     volumes:
       - /lib/modules:/lib/modules:ro
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
