--- a/molecule/containerd/molecule.yml
+++ b/molecule/containerd/molecule.yml
@@ -4,19 +4,23 @@
 dependency:
   name: galaxy
 driver:
-  name: docker
+  name: vagrant
+  provider:
+    name: libvirt
 platforms:
   - name: instance
-    image: geerlingguy/docker-${MOLECULE_DISTRO:-debian13}-ansible
-    pre_build_image: true
-    override_command: false
-    privileged: true
-    cgroupns_mode: host
-    tmpfs:
-      - /var/lib/containerd
-    volumes:
-      - /lib/modules:/lib/modules:ro
-      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    box: boxen/${MOLECULE_DISTRO:-debian-13}
+    cpu: 2
+    memory: 8192
+    provider_raw_config_args:
+      - cpu_mode = 'host-passthrough'
+      - disk_bus = 'virtio'
+      - nic_model_type = 'virtio'
+      - video_type = 'virtio'
+      - disk_driver :cache => 'writeback'
+      - "storage :file, bus: 'virtio', cache: 'writeback'"
+    instance_raw_config_args:
+      - vm.box_check_update = false
 provisioner:
   name: ansible
   config_options:
