--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-  "molecule>=25.5.0",
+  "molecule==25.1.0",
   "molecule-plugins[vagrant]>=23.7.0",
   "pytest>=8.4.1",
   "pytest-forked>=1.6.0",
