--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,7 +61,7 @@ jobs:
         run: |
           wget -O - https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
           echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(grep -oP '(?<=UBUNTU_CODENAME=).*' /etc/os-release || lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
-          sudo apt-get update && sudo apt-get install -y --no-install-recommends qemu-kvm libvirt-daemon-system ebtables vagrant ruby-fog-libvirt
+          sudo apt-get update && sudo apt-get install -y --no-install-recommends qemu-kvm libvirt-dev libvirt-daemon-system ebtables vagrant ruby-fog-libvirt
           vagrant plugin install vagrant-libvirt
       - run: uv run molecule test --destroy never -s ${{ matrix.scenario }}
         env:
