--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,6 +63,7 @@ jobs:
           echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(grep -oP '(?<=UBUNTU_CODENAME=).*' /etc/os-release || lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
           sudo apt-get update && sudo apt-get install -y --no-install-recommends ovmf dnsmasq-base qemu-kvm libvirt-dev libvirt-daemon-system ebtables vagrant ruby-fog-libvirt qemu-utils
           vagrant plugin install vagrant-libvirt
-      - run: sudo uv run molecule test --destroy never -s ${{ matrix.scenario }}
+      - run: sudo usermod -a -G libvirt $USER
+      - run: sg libvirt -c "uv run molecule test --destroy never -s ${{ matrix.scenario }}"
         env:
           MOLECULE_DISTRO: ${{ matrix.distro }}
