🔧 fix: update environment variable for molecule test script
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -73,7 +73,7 @@ jobs:
           cat <<EOF > script.bash
           #!/bin/bash
           #
-          export MOLECULE_DISTRO="${{ matrix.distro }}"
+          export MOLECULE_VAGRANT_BOX="${{ matrix.distro }}"
 
           uv run molecule test --destroy never -s "${{ matrix.scenario }}"
           EOF
