--- a/molecule/forget-package/prepare.yml
+++ b/molecule/forget-package/prepare.yml
@@ -3,13 +3,8 @@
 
 - name: Prepare
   hosts: all
+  become: true
   tasks:
-    - name: Update "apt" cache
-      ansible.builtin.apt:
-        update_cache: true
-      when:
-        - ansible_os_family == "Debian"
-
     - name: Install NGINX
       ansible.builtin.package:
         name: nginx
