🔧 fix: switch driver from docker to vagrant with libvirt provider
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/molecule/docker/molecule.yml
+++ b/molecule/docker/molecule.yml
@@ -4,7 +4,9 @@
 dependency:
   name: galaxy
 driver:
-  name: docker
+  name: vagrant
+  provider:
+    name: libvirt
 platforms:
   - name: instance
     box: boxen/${MOLECULE_VAGRANT_BOX:-debian-13}
