🔧 fix: add become directive to verify.yml and converge.yml; update prepare.yml
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/molecule/download-binaries/converge.yml
+++ b/molecule/download-binaries/converge.yml
@@ -2,6 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 - name: include playbook
+  become: true
   ansible.builtin.import_playbook: vexxhost.containers.download_binaries
   vars:
     target: instance
