--- a/molecule/forget-package/prepare.yml
+++ b/molecule/forget-package/prepare.yml
@@ -6,9 +6,10 @@
   become: true
   tasks:
     - name: Install NGINX
-      ansible.builtin.package:
+      ansible.builtin.apt:
         name: nginx
         state: present
+        update_cache: true
 
     - name: Ensure NGINX is running
       ansible.builtin.service:
