--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,14 +57,7 @@ jobs:
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       - uses: astral-sh/setup-uv@4959332f0f014c5280e7eac8b70c90cb574c9f9b # v6.6.0
-      - name: vexxhost/setup-vagrant
-        run: |
-          wget -O - https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(grep -oP '(?<=UBUNTU_CODENAME=).*' /etc/os-release || lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
-          sudo apt-get update && sudo apt-get install -y --no-install-recommends ovmf dnsmasq-base qemu-kvm libvirt-dev libvirt-daemon-system ebtables vagrant ruby-fog-libvirt qemu-utils
-          vagrant plugin install vagrant-libvirt
-          sudo cp /usr/share/OVMF/OVMF_VARS_4M.fd /var/lib/libvirt/qemu/nvram/
-      - run: sudo usermod -a -G libvirt $USER
+      - uses: ./.github/actions/setup-vagrant
       - run: uv run molecule test --destroy never -s "${{ matrix.scenario }}"
         shell: sg libvirt -c "bash -e {0}"
         env:
