🔧 fix: add SELinux package installation for RedHat systems
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/roles/containerd/tasks/main.yml
+++ b/roles/containerd/tasks/main.yml
@@ -20,6 +20,12 @@
       - apparmor-utils
   when: ansible_facts['os_family'] == "Debian"
 
+- name: Install SELinux packages
+  ansible.builtin.package:
+    state: present
+    name: container-selinux
+  when: ansible_facts['os_family'] == "RedHat"
+
 - name: Create systemd service file for containerd
   ansible.builtin.template:
     src: containerd.service.j2
