🔧 fix: remove become directive from multiple converge and verify tasks
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/molecule/containerd/molecule.yml
+++ b/molecule/containerd/molecule.yml
@@ -30,5 +30,7 @@ provisioner:
       pipelining: true
     defaults:
       callbacks_enabled: ansible.posix.profile_tasks
+    privilege_escalation:
+      become: true
 verifier:
   name: ansible
