🔧 fix: add SELinux context settings for containerd configuration directories
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/roles/containerd/tasks/main.yml
+++ b/roles/containerd/tasks/main.yml
@@ -42,9 +42,17 @@
     mode: "{{ item.mode | default('0o755') }}"
     owner: root
     group: root
+    seuser: "{{ item.seuser | default(omit) }}"
+    serole: "{{ item.serole | default(omit) }}"
+    setype: "{{ item.setype | default(omit) }}"
+    selevel: "{{ item.selevel | default(omit) }}"
   with_items:
     - path: "{{ containerd_cfg_dir }}"
     - path: "{{ containerd_storage_dir }}"
+      seuser: system_u
+      serole: object_r
+      setype: container_var_lib_t
+      selevel: s0
     - path: "{{ containerd_state_dir }}"
       mode: "0o711"
   notify:
