--- a/molecule/docker/molecule.yml
+++ b/molecule/docker/molecule.yml
@@ -31,8 +31,8 @@ provisioner:
     defaults:
       callbacks_enabled: ansible.posix.profile_tasks
   inventory:
-    group_vars:
-      all:
+    host_vars:
+      instance:
         ansible_become: true
         docker_version: 24.0.9
 verifier:
