🔧 fix: ensure SELinux is disabled only for RedHat systems
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/roles/containerd/tasks/main.yml
+++ b/roles/containerd/tasks/main.yml
@@ -15,6 +15,7 @@
 - name: Disable SELinux
   ansible.posix.selinux:
     state: permissive
+  when: ansible_facts['os_family'] == "RedHat"
 
 - name: Install AppArmor packages
   ansible.builtin.package:
