🔧 fix: add missing policy parameter for SELinux task
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/roles/containerd/tasks/main.yml
+++ b/roles/containerd/tasks/main.yml
@@ -14,6 +14,7 @@
 
 - name: Disable SELinux
   ansible.posix.selinux:
+    policy: targeted
     state: permissive
   when: ansible_facts['os_family'] == "RedHat"
 
