--- a/roles/containerd/tasks/main.yml
+++ b/roles/containerd/tasks/main.yml
@@ -14,8 +14,7 @@
 
 - name: Disable SELinux
   ansible.posix.selinux:
-    policy: targeted
-    state: permissive
+    state: disabled
   when: ansible_facts['os_family'] == "RedHat"
 
 - name: Install AppArmor packages
