🔧 fix: set default value for libvirt-version input in Vagrant setup
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/.github/actions/setup-vagrant/action.yaml
+++ b/.github/actions/setup-vagrant/action.yaml
@@ -7,7 +7,7 @@ description: Setup Vagrant environment with necessary dependencies
 inputs:
   libvirt-version:
     description: Libvirt plugin version
-    required: true
+    default: 0.12.2
 
 runs:
   using: composite
