--- a/roles/containerd/tasks/main.yml
+++ b/roles/containerd/tasks/main.yml
@@ -15,6 +15,11 @@
 - name: Set SELinux to permissive mode
   when: ansible_facts['os_family'] == "RedHat"
   block:
+    - name: Install SELinux packages
+      ansible.builtin.package:
+        state: present
+        name: container-selinux
+
     - name: Set SELinux to permissive at runtime
       ansible.builtin.command: setenforce 0
       changed_when: false
