--- a/roles/containerd/tasks/main.yml
+++ b/roles/containerd/tasks/main.yml
@@ -12,14 +12,10 @@
 # License for the specific language governing permissions and limitations
 # under the License.
 
+# NOTE(fitbeard): Only set SELinux to permissive if it's not disabled
 - name: Set SELinux to permissive mode
-  when: ansible_facts['os_family'] == "RedHat"
+  when: ansible_facts['os_family'] == "RedHat" and ansible_selinux.status == "enabled"
   block:
-    - name: Install SELinux packages
-      ansible.builtin.package:
-        state: present
-        name: container-selinux
-
     - name: Set SELinux to permissive at runtime
       ansible.builtin.command: setenforce 0
       changed_when: false
