ci: test zuul based job
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/extensions/molecule/docker/converge.yml
+++ b/extensions/molecule/docker/converge.yml
@@ -3,7 +3,6 @@
 
 - name: Converge
   hosts: all
+  become: true
   roles:
-    - role: vexxhost.containers.forget_package
-      vars:
-        forget_package_name: nginx
+    - vexxhost.containers.docker
