--- a/extensions/molecule/download-binaries/converge.yml
+++ b/extensions/molecule/download-binaries/converge.yml
@@ -4,4 +4,4 @@
 - name: include playbook
   ansible.builtin.import_playbook: vexxhost.containers.download_binaries
   vars:
-    target: instance
+    target: all
