--- a/extensions/molecule/docker/verify.yml
+++ b/extensions/molecule/docker/verify.yml
@@ -3,6 +3,7 @@
 
 - name: Verify
   hosts: all
+  become: true
   pre_tasks:
     - name: Populate service facts
       ansible.builtin.service_facts:
