--- a/extensions/molecule/forget-package/prepare.yml
+++ b/extensions/molecule/forget-package/prepare.yml
@@ -3,17 +3,13 @@
 
 - name: Prepare
   hosts: all
+  become: true
   tasks:
-    - name: Update "apt" cache
-      ansible.builtin.apt:
-        update_cache: true
-      when:
-        - ansible_os_family == "Debian"
-
     - name: Install NGINX
-      ansible.builtin.package:
+      ansible.builtin.apt:
         name: nginx
         state: present
+        update_cache: true
 
     - name: Ensure NGINX is running
       ansible.builtin.service:
