--- a/extensions/molecule/forget-package/verify.yml
+++ b/extensions/molecule/forget-package/verify.yml
@@ -3,6 +3,7 @@
 
 - name: Verify
   hosts: all
+  become: true
   pre_tasks:
     - name: Populate package facts
       ansible.builtin.package_facts:
