--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
-name = "ansible-collection-kubernetes"
+name = "ansible-collection-containers"
 version = "1.4.4"
 authors = [{ name = "VEXXHOST, Inc.", email = "support@vexxhost.com" }]
-description = "Ansible collection for deploying Kubernetes clusters"
+description = "Ansible collection for deploying container components"
 readme = "README.md"
 requires-python = ">=3.10"
 license = "Apache-2.0"
@@ -32,6 +32,10 @@ dev = [
   "pytest-forked>=1.6.0",
   "pytest-xdist>=3.7.0",
 ]
+
+[project.urls]
+source = "https://github.com/vexxhost/ansible-collection-containers"
+issues = "https://github.com/vexxhost/ansible-collection-containers/issues"
 
 [tool.uv]
 package = false
