--- a/.github/workflows/bump.yaml
+++ b/.github/workflows/bump.yaml
@@ -28,6 +28,28 @@ jobs:
 
             This PR updates the `cni-plugins` binaries to the latest versions.
 
+  containerd:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          token: ${{ secrets.VEXXHOST_BOT_PAT }}
+      - run: ./hack/bump/containerd.sh
+        env:
+          GH_TOKEN: ${{ github.token }}
+      - uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e # v7.0.8
+        with:
+          token: ${{ secrets.VEXXHOST_BOT_PAT }}
+          commit-message: "chore(deps): update containerd"
+          signoff: true
+          branch: bump/containerd
+          delete-branch: true
+          title: "chore(deps): update containerd"
+          body: |
+            ## Automated `containerd` update
+
+            This PR updates the `containerd` binaries to the latest versions.
+
   cri-tools:
     runs-on: ubuntu-latest
     steps:
