--- a/.github/workflows/bump.yaml
+++ b/.github/workflows/bump.yaml
@@ -18,6 +18,7 @@ jobs:
       - uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e # v7.0.8
         with:
           token: ${{ secrets.VEXXHOST_BOT_PAT }}
+          push-to-fork: vexxhost-bot/ansible-collection-kubernetes
           commit-message: "chore(deps): update cni-plugins"
           signoff: true
           branch: bump/cni-plugins
@@ -40,6 +41,7 @@ jobs:
       - uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e # v7.0.8
         with:
           token: ${{ secrets.VEXXHOST_BOT_PAT }}
+          push-to-fork: vexxhost-bot/ansible-collection-kubernetes
           commit-message: "chore(deps): update containerd"
           signoff: true
           branch: bump/containerd
@@ -62,6 +64,7 @@ jobs:
       - uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e # v7.0.8
         with:
           token: ${{ secrets.VEXXHOST_BOT_PAT }}
+          push-to-fork: vexxhost-bot/ansible-collection-kubernetes
           commit-message: "chore(deps): update cri-tools"
           signoff: true
           branch: bump/cri-tools
@@ -84,6 +87,7 @@ jobs:
       - uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e # v7.0.8
         with:
           token: ${{ secrets.VEXXHOST_BOT_PAT }}
+          push-to-fork: vexxhost-bot/ansible-collection-kubernetes
           commit-message: "chore(deps): update nerdctl"
           signoff: true
           branch: bump/nerdctl
@@ -106,6 +110,7 @@ jobs:
       - uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e # v7.0.8
         with:
           token: ${{ secrets.VEXXHOST_BOT_PAT }}
+          push-to-fork: vexxhost-bot/ansible-collection-kubernetes
           commit-message: "chore(deps): update runc"
           signoff: true
           branch: bump/runc
