ci: add debian-13 basa job
Signed-off-by: Dong Ma <dong.ma@vexxhost.com>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,6 +1,11 @@
 - job:
-    name: ansible-collection-containers-molecule-containerd
+    name: ansible-collection-containers-molecule
     parent: molecule
+    nodeset: debian-13
+
+- job:
+    name: ansible-collection-containers-molecule-containerd
+    parent: ansible-collection-containers-molecule
     abstract: true
     vars:
       molecule_scenario: containerd
@@ -32,7 +37,7 @@
 
 - job:
     name: ansible-collection-containers-molecule-docker
-    parent: molecule
+    parent: ansible-collection-containers-molecule
     abstract: true
     vars:
       docker_version: 24.0.9
@@ -64,13 +69,13 @@
 
 - job:
     name: ansible-collection-containers-molecule-download-binaries
-    parent: molecule
+    parent: ansible-collection-containers-molecule
     vars:
       molecule_scenario: download-binaries
 
 - job:
     name: ansible-collection-containers-molecule-forget-package
-    parent: molecule
+    parent: ansible-collection-containers-molecule
     abstract: true
     vars:
       molecule_scenario: forget-package
@@ -97,7 +102,7 @@
 
 - job:
     name: ansible-collection-containers-molecule-nerdctl
-    parent: molecule
+    parent: ansible-collection-containers-molecule
     abstract: true
     vars:
       molecule_scenario: nerdctl
