Add abstract: true
Signed-off-by: Dong Ma <dong.ma@vexxhost.com>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,6 +1,7 @@
 - job:
     name: ansible-collection-containers-molecule
     parent: molecule
+    abstract: true
     nodeset: debian-13
 
 - job:
