--- a/extensions/molecule/docker/converge.yml
+++ b/extensions/molecule/docker/converge.yml
@@ -4,5 +4,13 @@
 - name: Converge
   hosts: all
   become: true
+  pre_tasks:
+    - name: Update "apt" cache
+      ansible.builtin.apt:
+        update_cache: true
+        cache_valid_time: 3600
+      when:
+        - ansible_facts['os_family'] | lower == 'debian'
+
   roles:
     - vexxhost.containers.docker
