Use ansible_facts variable style to avoid need for inject facts
Where deployments disable INJECT_FACTS_AS_VARS this ensures
continued compatibility.

Signed-off-by: Andrew Bonney <andrew.bonney@bbc.co.uk>

--- a/roles/containerd/defaults/main.yml
+++ b/roles/containerd/defaults/main.yml
@@ -17,7 +17,7 @@ containerd_versions: "{{ containerd_archive_checksums['amd64'].keys() | list | c
 containerd_latest_v1: "{{ containerd_versions | select('match', '^1\\..*') | list | last }}"
 containerd_latest: "{{ containerd_versions | last }}"
 
-containerd_version: "{{ containerd_latest_v1 if ansible_distribution_release == 'focal' else containerd_latest }}"
+containerd_version: "{{ containerd_latest_v1 if ansible_facts['distribution_release'] == 'focal' else containerd_latest }}"
 
 containerd_archive_checksums:
   amd64:
