chore: set inject_facts_as_vars as false
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/extensions/molecule/containerd/molecule.yml
+++ b/extensions/molecule/containerd/molecule.yml
@@ -5,7 +5,7 @@ ansible:
   cfg:
     defaults:
       callbacks_enabled: ansible.posix.profile_tasks
-      deprecation_warnings: false
+      inject_facts_as_vars: false
     connection:
       pipelining: true
   executor:
