move docker_config
Move docker_config to default folder. The variable was not taking any effect.

Signed-off-by: Michiel Piscaer <michiel@piscaer.com>

--- a/roles/docker/defaults/main.yml
+++ b/roles/docker/defaults/main.yml
@@ -37,3 +37,5 @@ docker_state_dir: /run/docker
 docker_http_proxy: "{{ http_proxy | default('') }}"
 docker_https_proxy: "{{ https_proxy | default('') }}"
 docker_no_proxy: "{{ no_proxy | default('') }}"
+
+docker_config: {}
