Migrate registry config to certs.d for v2.0+ compatibility

--- a/roles/containerd/tasks/main.yml
+++ b/roles/containerd/tasks/main.yml
@@ -69,6 +69,34 @@
   notify:
     - Restart containerd
 
+- name: Create registry configuration directory
+  ansible.builtin.file:
+    dest: "{{ containerd_cfg_dir }}/certs.d"
+    state: directory
+    mode: "0755"
+    owner: root
+    group: root
+
+- name: Create registry specific configuration directories
+  ansible.builtin.file:
+    dest: "{{ containerd_cfg_dir }}/certs.d/{{ item }}"
+    state: directory
+    mode: "0755"
+    owner: root
+    group: root
+  with_items: "{{ containerd_insecure_registries }}"
+
+- name: Configure insecure registries
+  ansible.builtin.template:
+    src: hosts.toml.j2
+    dest: "{{ containerd_cfg_dir }}/certs.d/{{ item }}/hosts.toml"
+    mode: "0644"
+    owner: root
+    group: root
+  with_items: "{{ containerd_insecure_registries }}"
+  notify:
+    - Restart containerd
+
 - name: Create containerd config file
   ansible.builtin.template:
     src: config.toml.j2
