fix: use new format snapshotter config for containerd v2
For some reason, despite still indicating a v2 config file,
the v3 syntax is necessary when specifying the snapshotter,
otherwise the default is used. Really this feels like a
containerd bug, but this approach appears to work.

Additionally, when using a non-default snapshotter, it
may be necessary to specify a platform, otherwise image
pulls can fail.

Signed-off-by: Andrew Bonney <andrew.bonney@bbc.co.uk>

--- a/roles/containerd/defaults/main.yml
+++ b/roles/containerd/defaults/main.yml
@@ -132,3 +132,7 @@ containerd_no_proxy: "{{ no_proxy | default('') }}"
 # NOTE(jrosser): If you need to override the default containerd snapshotter, for example
 # when the underlying filesystem does not support overlayfs, set it here
 containerd_snapshotter: ""
+# From containerd v2.1 the transfer service is used for image pulls which may require a
+# platform explicitly configuring when not using the default snapshotter
+# https://github.com/containerd/containerd/blob/main/docs/cri/config.md#image-pull-configuration-since-containerd-v21
+containerd_snapshotter_platform: ""
